<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <GVL Name="GVL_RCC" Id="{e34435c6-157b-4cae-9082-5ecee20695fb}">
    <Declaration><![CDATA[VAR_GLOBAL
    (* OverrideMode *)
    {attribute 'pytmc' := 'pv: UED:RCC:VAC:OVRD_MODE'}
    xSystemOverrideMode_RCC	: BOOL := FALSE;


    {attribute 'pytmc' :=' pv: UED:RCC:VRC:01 '}
    {attribute 'TcLinkTo' := 	'.i_xClsLS	:=  TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^RCC_E2 (EL1004)^Channel 1^Input;
                                .q_xOPN_DO	:=	TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^RCC_E1 (EL2004)^Channel 1^Output'}
    RCC_VRC_01 : FB_VRC_NC_ClsLS;


    {attribute 'pytmc' :=' pv: UED:RCC:VRC:02 '}
    {attribute 'TcLinkTo' := 	'.i_xClsLS	:=  TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^RCC_E2 (EL1004)^Channel 2^Input;
                                .q_xOPN_DO	:=	TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^RCC_E1 (EL2004)^Channel 2^Output'}
    RCC_VRC_02 : FB_VRC_NC_ClsLS;

    // RIX RCC USES
    //{attribute 'pytmc' :=' pv: UED:RCC:VRC:02 '}
    //{attribute 'TcLinkTo' := 	'.i_xOpnLS	:= 	TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^RCC_E2 (EL1004)^Channel 3^Input;
    //                             .i_xClsLS	:=	TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^RCC_E2 (EL1004)^Channel 4^Input;
    //                            .q_xOPN_DO	:=	TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^RCC_E1 (EL2004)^Channel 2^Output'}
    //RCC_VRC_02 : FB_VRC;

    {attribute 'pytmc' :=' pv: UED:RCC:VRC:03 '}
    {attribute 'TcLinkTo' := 	'.i_xClsLS	:=	TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^RCC_E2 (EL1004)^Channel 3^Input;
                                .q_xOPN_DO	:= 	TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^RCC_E1 (EL2004)^Channel 3^Output'}
    RCC_VRC_03 : FB_VRC_NC_ClsLS;


    {attribute 'pytmc' :=' pv: UED:RCC:VRC:04 '}
    {attribute 'TcLinkTo' := 	'.i_xClsLS	:=	TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^RCC_E2 (EL1004)^Channel 4^Input;
                                .q_xOPN_DO	:=  TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^RCC_E1 (EL2004)^Channel 4^Output'}
    RCC_VRC_04 : FB_VRC_NC_ClsLS;


    {attribute 'pytmc' :=' pv: UED:RCC:GCP:01 '}
	{attribute 'TcLinkTo' := 	'.i_iPRESS_R	:= TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^RCC_GPI (EL3174-0002)^AI Standard Channel 1^Value'}
	RCC_GCP_01 : FB_972;


    {attribute 'pytmc' :=' pv: UED:RCC:TC:01 '}
    {attribute 'TcLinkTo' := ' .bError 		:=	TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^RCC_TC (EL3314)^TC Inputs Channel 1^Status^Error;
                               .bUnderrange :=	TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^RCC_TC (EL3314)^TC Inputs Channel 1^Status^Underrange;
                               .bOverrange 	:=	TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^RCC_TC (EL3314)^TC Inputs Channel 1^Status^Overrange ;
                               .iRaw		:= TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^RCC_TC (EL3314)^TC Inputs Channel 1^Value '}
   RCC_STC_01 : FB_TempSensor;
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>