<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.2">
  <POU Name="PRG_RCC" Id="{522e97e2-9912-4572-a783-5cd8dcae93c6}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM PRG_RCC
VAR
    RCC_VRC_01_OPEN_OK : BOOL;
    RCC_VRC_02_OPEN_OK : BOOL;
    RCC_VRC_03_OPEN_OK : BOOL;
    RCC_VRC_04_OPEN_OK : BOOL;

   {attribute 'pytmc' :=' pv: UED:GCP:01:INLK_Setpoint '}
    RCC_GCP_01_INTERLOCK_SETPOINT : REAL := 10;

END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[RCC_GCP_01.M_SetBits(30518);
RCC_GCP_01(PG=>);
RCC_STC_01();

(* Valve can open only when UED-RCC-VRC-02 and 03 are closed*)
RCC_VRC_01_OPEN_OK := ( RCC_VRC_02.iq_stValve.i_xClsLS AND NOT RCC_VRC_02.iq_stValve.q_xOPN_DO ) AND
                                    ( RCC_VRC_03.iq_stValve.i_xClsLS AND NOT RCC_VRC_03.iq_stValve.q_xOPN_DO ) ;

RCC_VRC_01(i_xExtILK_OK := RCC_VRC_01_OPEN_OK,
                i_xOverrideMode := xSystemOverrideMode_RCC,
                 iq_stValve=> );

(* Valve can open only when UED-RCC-VRC-01 and 04 are closed*)
RCC_VRC_02_OPEN_OK := ( RCC_VRC_01.iq_stValve.i_xClsLS AND NOT RCC_VRC_01.iq_stValve.q_xOPN_DO ) AND
                                    ( RCC_VRC_04.iq_stValve.i_xClsLS AND NOT RCC_VRC_04.iq_stValve.q_xOPN_DO );

RCC_VRC_02(i_xExtILK_OK := RCC_VRC_02_OPEN_OK,
                i_xOverrideMode := xSystemOverrideMode_RCC,
                 iq_stValve=> );

(* Valve can open only when UED-RCC-GCP-01 reading < setpoint Torr and UED-RCC-VRC-01 and 04 are closed*)
RCC_VRC_03_OPEN_OK := (RCC_GCP_01.PG.rPRESS < RCC_GCP_01_INTERLOCK_SETPOINT and RCC_GCP_01.PG.xPRESS_OK ) AND
                                 ( RCC_VRC_01.iq_stValve.i_xClsLS AND NOT RCC_VRC_01.iq_stValve.q_xOPN_DO ) AND
                                              ( RCC_VRC_04.iq_stValve.i_xClsLS AND NOT RCC_VRC_04.iq_stValve.q_xOPN_DO );

RCC_VRC_03(i_xExtILK_OK := RCC_VRC_03_OPEN_OK,
                i_xOverrideMode := xSystemOverrideMode_RCC,
                 iq_stValve=> );

(* Valve can open only when UED-RCC-VRC-02 and 03 are closed*)
RCC_VRC_04_OPEN_OK := ( RCC_VRC_02.iq_stValve.i_xClsLS AND NOT RCC_VRC_02.iq_stValve.q_xOPN_DO ) AND
                                      ( RCC_VRC_03.iq_stValve.i_xClsLS AND NOT RCC_VRC_03.iq_stValve.q_xOPN_DO ) ;

RCC_VRC_04(i_xExtILK_OK := RCC_VRC_04_OPEN_OK,
                i_xOverrideMode := xSystemOverrideMode_RCC,
                 iq_stValve=> );				 ]]></ST>
    </Implementation>
  </POU>
</TcPlcObject>